testdata/baselines/reference/submodule/conformance/typedefCrossModule4.errors.txt
mod3.js(3,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
mod3.js(3,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== mod3.js (2 errors) ====
    /** @typedef {number} Foo */
    class Bar { }
    module.exports = { Foo: Bar };
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    
    